# arrange

./: Cargo.toml  Cross.toml  IDEA.md  build.rs
arrange/: Cargo.toml
arrange-demo/: Cargo.toml  Makefile  Makefile.toml
arrange-demo/src/: main.rs
arrange-demo/src/hw/: Makefile  clock_divider.v  pinmap.pcf  top.v
arrange-ftdi/: ACKNOLEDGEMENT.md  Cargo.toml
arrange-ftdi/src/: lib.rs  main.rs
arrange-ftdi/src/cli/: arguments.rs  block_erase.rs  error.rs  ftdi_interface.rs  mod.rs  test_mode.rs
arrange-ftdi/src/ftdi/: block_erase.rs  flash.rs  mod.rs  mpsse.rs  test_mode.rs
arrange-iceprog/: ACKNOLEDGEMENT.md  Cargo.toml  README.md
arrange-iceprog/src/: main.rs
arrange-iceprog/src/cli/: arguments.rs  mod.rs  parsers.rs
arrange-misc/: Cargo.toml
arrange-misc/src/: error.rs  traits.rs
arrange-traits/: Cargo.toml
arrange-traits/src/: lib.rs
arrange/src/: lib.rs
arrange/src/prelude/: mod.rs
misc/: 53-lattice-ftdi.rules
src/: main.rs
src/hw/: Makefile  pinmap.pcf  top.v
