[workspace]
resolver = "2"
members = [
    "arrange",
    "arrange-ftdi",
    "arrange-iceprog",
    "arrange-misc",
    "arrange-demo"
]

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
libftdi1-sys = { version = "1.1.3", features = ["libusb1-sys", "vendored"] }
# Needed for Logging
env_logger = "0.11.3"
log = "0.4.21"
