[package]
name = "arrange-ftdi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrange-misc = { path = "../arrange-misc" }
clap = { workspace = true } 
env_logger = { workspace = true }
libftdi1-sys = { workspace = true }
log = { workspace = true }
