[package]
name = "arrange-iceprog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrange = { path="../arrange", features = ["ftdi"] }
clap = { version = "4.5.4", features = ["derive"] }

# Needed for arrange logging.
env_logger = "0.11.3"
libftdi1-sys = "1.1.3"
log = "0.4.21"
