[package]
name = "arrange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrange-misc = { path="../arrange-misc" }
arrange-ftdi = { path="../arrange-ftdi", optional = true }

[features]
default = ["dep:arrange-ftdi"]
ftdi = ["dep:arrange-ftdi"]
